development/exposed/env-vars-exposer_ingress_gce.yml
# Ingress (GCE) resource for the underlying Service
# Author: Manuel Bernal Llinares <mbdebian@gmail.com>
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: exting-gce-env-vars-exposer
    labels:
        environment: development
        tier: api
        app: env-vars-exposer
        loadBalancerType: ingress
    annotations:
        kubernetes.io/ingress.class: "gce"
        kubernetes.io/ingress.global-static-ip-name: ipaddr-iorg-dev-envvars-exposed
        #networking.gke.io/managed-certificates: cert-env-vars-exposer
        ingress.gcp.kubernetes.io/pre-shared-cert: 'cert-iorg-dev-newenvvarsexposer'
        kubernetes.io/ingress.allow-http: "false"
spec:
    backend:
        serviceName: nodeport-env-vars-exposer
        servicePort: 8080
